--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -32,7 +32,7 @@
                     <tr>
                         {% if loop.first %}
                             <!-- Exam ID -->
-                            <td>[{{ att.report.exam.examId }}]</td>
+                            <td style="text-align: center;">[{{ att.report.exam.examId }}]</td>
 
                             <!-- Course Details -->
                             <td rowspan="{{ rowspan }}">
