--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -32,8 +32,8 @@
                     <tr>
                         {% if loop.first %}
                             <!-- Exam ID -->
-                            <td style="text-align: center;">[{{ att.report.exam.examId }}]</td>
-
+                            <td rowspan="{{ rowspan }}">[{{ att.report.exam.examId }}]</td>
+                        
                             <!-- Course Details -->
                             <td rowspan="{{ rowspan }}">
                                 Course Name: {{ att.report.exam.course.courseName }} <br>
@@ -67,13 +67,13 @@
                         {% endif %}
 
                         <!-- Check-in Time -->
-                        <td>{{ att.checkIn }}</td>
+                        <td rowspan="{{ rowspan }}">{{ att.checkIn }}</td>
 
                         <!-- Check-out Time -->
-                        <td>{{ att.checkOut }}</td>
+                        <td rowspan="{{ rowspan }}">{{ att.checkOut }}</td>
 
                         <!-- Attendance Status -->
-                        <td>{{ att.remark }}</td>
+                        <td rowspan="{{ rowspan }}">{{ att.remark }}</td>
                     </tr>
                 {% endfor %}
             {% endfor %}
