--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -31,38 +31,47 @@
                     {% for att in grouped %}
                         <tr>
                             {% if loop.first %}
-                                <td>[{{ att.report.exam.examId }}]</td>
+                                <!-- Exam ID -->
+                                <td rowspan="{{ rowspan }}">[{{ att.report.exam.examId }}]</td>
+
+                                <!-- Course Details -->
                                 <td rowspan="{{ rowspan }}">
                                     Course Name: {{ att.report.exam.course.courseName }} <br>
                                     Course Code/Section: {{ att.report.exam.course.courseCodeSection }}<br>
                                     Program Code: {{ att.report.exam.course.courseDepartment }} <br>
                                     Number of Students: [{{ att.report.exam.course.courseStudent }}] <br>
-                                    P: [{{ att.report.exam.course.practicalLecturer.userName }}] <br>
-                                    T: [{{ att.report.exam.course.tutorialLecturer.userName }}]
+                                    Practical Lecturer: [{{ att.report.exam.course.practicalLecturer.userName }}] <br>
+                                    Tutorial Lecturer: [{{ att.report.exam.course.tutorialLecturer.userName }}]
                                 </td>
 
+                                <!-- Exam Start Time -->
                                 <td rowspan="{{ rowspan }}">
                                     {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} <br>
                                     [{{ att.report.exam.examStartTime.strftime("%A") }}] <br>
                                     {{ att.report.exam.examStartTime.strftime("%H:%M") }}
                                 </td>
 
+                                <!-- Exam End Time -->
                                 <td rowspan="{{ rowspan }}">
                                     {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>
                                     [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
                                     {{ att.report.exam.examEndTime.strftime("%H:%M") }}
                                 </td>
                                 
+                                <!-- Exam Venue with Number of Invigilator(s)-->
                                 <td rowspan="{{ rowspan }}">{{ att.report.exam.examVenue }}</td>
                                 <td rowspan="{{ rowspan }}">[{{ att.report.exam.examNoInvigilator }}]</td>
+
+                                <!-- Invigilator Details -->
+                                <td rowspan="{{ rowspan }}">
+                                    ID: [{{ att.invigilator.userId }}] <br>
+                                    Name: {{ att.invigilator.userName }} <br>
+                                    Contact: {{ att.invigilator.userContact }}
+                                </td>
                             {% endif %}
                             
-                            <td rowspan="{{ rowspan }}">
-                                ID: [{{ att.invigilator.userId }}] <br>
-                                Name: {{ att.invigilator.userName }} <br>
-                                Contact: {{ att.invigilator.userContact }}
-                            </td>
-                            <td>{{ att.remark }}</td>
+                            <!-- Attendance Status -->
+                            <td rowspan="{{ rowspan }}">{{ att.remark }}</td>
                         </tr>
                     {% endfor %}
                 {% endfor %}
