--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -119,10 +119,8 @@
                     <th>No</th>
                     <th>Department Code</th>
                     <th>Department Name</th>
-                    <th>Dean Name</th>
-                    <th>Dean Email</th>
-                    <th>Hop Name</th>
-                    <th>Hop Email</th>
+                    <th>Dean Details</th>
+                    <th>Hop Details</th>
                 </tr>
             </thead>
             <tbody>
@@ -131,10 +129,18 @@
                     <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
                     <td>{{ row.departmentCode }}</td>
                     <td>{{ row.departmentName }}</td>
-                    <td>{{ row.dean.userId if row.dean else '' }}</td>
-                    <td>{{ row.dean.userEmail if row.dean else '' }}</td>
-                    <td>{{ row.hop.userId if row.hop else '' }}</td>
-                    <td>{{ row.hop.userEmail if row.hop else '' }}</td>
+                    <td rowspan="{{ rowspan }}">
+                        Dean ID: {{ row.dean.userId if row.dean else '' }} <br>
+                        Dean Name: {{ row.dean.userName if row.dean else '' }} <br>
+                        Dean Email: {{ row.dean.userEmail if row.dean else '' }} <br>
+                        Dean Contact: {{ row.dean.userContact if row.dean else '' }}
+                    </td>
+                    <td rowspan="{{ rowspan }}">
+                        Hop ID: {{ row.hop.userId if row.hop else '' }} <br>
+                        Hop Name: {{ row.hop.userName if row.hop else '' }} <br>
+                        Hop Email: {{ row.hop.userEmail if row.hop else '' }} <br>
+                        Hop Contact: {{ row.hop.userContact if row.hop else '' }}
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
