--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -198,7 +198,7 @@
                     <td>{{ row.courseDepartment }}</td>
                     <td>[{{ row.courseExamId }}]</td>
                     <td rowspan="{{ rowspan }}">
-                        Practical Lecturer: {{ row.practicalLecturer.userName }} <br><br>
+                        Practical Lecturer: {{ row.practicalLecturer.userName }} <br>
                         Tutorial Lecturer: {{ row.tutorialLecturer.userName }}
                     </td>
                     <td>[{{ row.courseStudent }}]</td>
