--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -16,9 +16,7 @@
             <tr>
                 <th>Exam ID</th>
                 <th>Course Details</th>
-                <th>Exam Start Time</th>
-                <th>Exam End Time</th>
-                <th>Exam Venue</th>
+                <th>Exam Details</th>
                 <th>Number of Invigilators</th>
                 <th>Invigilator Details</th>
                 <th>Check-in Time</th>
@@ -42,22 +40,12 @@
                                 Number of Students: [{{ att.report.exam.course.courseStudent }}]
                             </td>
 
-                            <!-- Exam Start Time -->
                             <td rowspan="{{ rowspan }}">
-                                {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} <br>
-                                [{{ att.report.exam.examStartTime.strftime("%A") }}] <br>
-                                {{ att.report.exam.examStartTime.strftime("%H:%M") }}
+                                Exam Date : {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} - {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>      
+                                Exam Day: [{{ att.report.exam.examStartTime.strftime("%A") }}] - [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
+                                Exam Start Time-End Time: {{ att.report.exam.examStartTime.strftime("%H:%M") }} - {{ att.report.exam.examEndTime.strftime("%H:%M") }}
+                                Exam Venue: [{{ att.report.exam.examVenue }}]
                             </td>
-
-                            <!-- Exam End Time -->
-                            <td rowspan="{{ rowspan }}">
-                                {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>
-                                [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
-                                {{ att.report.exam.examEndTime.strftime("%H:%M") }}
-                            </td>
-
-                            <!-- Exam Venue -->
-                            <td rowspan="{{ rowspan }}">[{{ att.report.exam.examVenue }}]</td>
 
                             <!-- Number of Invigilators -->
                             <td rowspan="{{ rowspan }}">[{{ att.report.exam.examNoInvigilator }}]</td>
