--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -40,6 +40,7 @@
                                 Number of Students: [{{ att.report.exam.course.courseStudent }}]
                             </td>
 
+                            <!-- Exam Details -->
                             <td rowspan="{{ rowspan }}">
                                 Exam Date : {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} - {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>      
                                 Exam Day  : [{{ att.report.exam.examStartTime.strftime("%A") }}] - [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
