--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -16,9 +16,7 @@
                 <tr>
                     <th>Exam ID</th>
                     <th>Course Details</th>
-                    <th>Exam Start Time</th>
-                    <th>Exam End Time</th>
-                    <th>Exam Venue</th>
+                    <th>Exam Details</th>
                     <th>Number of Invigilators</th>
                     <th>Invigilator Details</th>
                     <th>Attendance Status</th>
@@ -45,22 +43,14 @@
                                     Tutorial Lecturer: [{{ att.report.exam.course.tutorialLecturer.userName }}]
                                 </td>
 
-                                <!-- Exam Start Time -->
+                                <!-- Exam Details -->
                                 <td rowspan="{{ rowspan }}">
-                                    {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} <br>
-                                    [{{ att.report.exam.examStartTime.strftime("%A") }}] <br>
-                                    {{ att.report.exam.examStartTime.strftime("%H:%M") }}
+                                    Exam Date : {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} - {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>      
+                                    Exam Day  : [{{ att.report.exam.examStartTime.strftime("%A") }}] - [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
+                                    Exam Time : {{ att.report.exam.examStartTime.strftime("%H:%M") }} - {{ att.report.exam.examEndTime.strftime("%H:%M") }} <br>
+                                    Exam Venue: [{{ att.report.exam.examVenue }}]
                                 </td>
 
-                                <!-- Exam End Time -->
-                                <td rowspan="{{ rowspan }}">
-                                    {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>
-                                    [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
-                                    {{ att.report.exam.examEndTime.strftime("%H:%M") }}
-                                </td>
-
-                                <!-- Exam Venue -->
-                                <td rowspan="{{ rowspan }}">{{ att.report.exam.examVenue }}</td>
                                 <td rowspan="{{ rowspan }}">[{{ att.report.exam.examNoInvigilator }}]</td>
                             {% endif %}
 
