--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -195,16 +195,9 @@
             <thead>
                 <tr>
                     <th>No</th>
+                    <th>Course Details</th>
                     <th>Exam ID</th>
-                    <th>Course/Section</th>
-                    <th>Course Name</th>
-                    <th>Course Department</th>
-                    <th>Practical Lecturer</th>
-                    <th>Tutorial Lecturer</th>
-                    <th>Exam Start Time</th>
-                    <th>Exam End Time</th>
-                    <th>Exam Venue</th>
-                    <th>Number of Students</th>
+                    <th>Exam Details</th>
                     <th>Number of Invigilators</th>
                 </tr>
             </thead>
@@ -212,29 +205,27 @@
                 {% for row in exam_data %}
                     <tr>
                         <td>{{ loop.index }}</td>
+
+                        <!-- Course Details -->
+                        <td rowspan="{{ rowspan }}">
+                            Course Name: {{ att.report.exam.course.courseName }} <br>
+                            Course Code/Section: {{ att.report.exam.course.courseCodeSection }}<br>
+                            Program Code: {{ att.report.exam.course.courseDepartment }} <br>
+                            Number of Students: [{{ att.report.exam.course.courseStudent }}] <br>
+                            Practical Lecturer: [{{ att.report.exam.course.practicalLecturer.userName }}] <br>
+                            Tutorial Lecturer: [{{ att.report.exam.course.tutorialLecturer.userName }}]
+                        </td>
+
                         <td>[{{ row.examId }}]</td>
-                        <td>{{ row.course.courseCodeSection }}</td>
-                        <td>{{ row.course.courseName }}</td>
-                        <td>{{ row.course.courseCode }}</td>
-                        <td>{{ row.course.practicalLecturer.userName }}</td>
-                        <td>{{ row.course.tutorialLecturer.userName }}</td>
 
-                        <!-- Start: show Date, Day, Time together -->
-                        <td>
-                            {{ row.examStartTime.strftime("%Y-%m-%d") }} <br>
-                            [{{ row.examStartTime.strftime("%A") }}] <br>
-                            {{ row.examStartTime.strftime("%H:%M") }}
+                        <!-- Exam Details -->
+                        <td rowspan="{{ rowspan }}">
+                            Exam Date : {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} - {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>      
+                            Exam Day  : [{{ att.report.exam.examStartTime.strftime("%A") }}] - [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
+                            Exam Time : {{ att.report.exam.examStartTime.strftime("%H:%M") }} - {{ att.report.exam.examEndTime.strftime("%H:%M") }} <br>
+                            Exam Venue: [{{ att.report.exam.examVenue }}]
                         </td>
-
-                        <!-- End: show Date, Day, Time together -->
-                        <td>
-                            {{ row.examEndTime.strftime("%Y-%m-%d") }} <br>
-                            [{{ row.examEndTime.strftime("%A") }}] <br>
-                            {{ row.examEndTime.strftime("%H:%M") }}
-                        </td>
-
-                        <td>{{ row.examVenue }}</td>
-                        <td>[{{ row.course.courseStudent }}]</td>
+                        
                         <td>[{{ row.examNoInvigilator }}]</td>
                     </tr>
                 {% endfor %}
