--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -208,22 +208,22 @@
 
                         <!-- Course Details -->
                         <td rowspan="{{ rowspan }}">
-                            Course Name: {{ att.report.exam.course.courseName }} <br>
-                            Course Code/Section: {{ att.report.exam.course.courseCodeSection }}<br>
-                            Program Code: {{ att.report.exam.course.courseDepartment }} <br>
-                            Number of Students: [{{ att.report.exam.course.courseStudent }}] <br>
-                            Practical Lecturer: [{{ att.report.exam.course.practicalLecturer.userName }}] <br>
-                            Tutorial Lecturer: [{{ att.report.exam.course.tutorialLecturer.userName }}]
+                            Course Name: {{ row.course.courseName }} <br>
+                            Course Code/Section: {{ row.course.courseCodeSection }}<br>
+                            Program Code: {{ row.course.courseDepartment }} <br>
+                            Number of Students: [{{ row.course.courseStudent }}] <br>
+                            Practical Lecturer: [{{ row.course.practicalLecturer.userName }}] <br>
+                            Tutorial Lecturer: [{{ row.course.tutorialLecturer.userName }}]
                         </td>
 
                         <td>[{{ row.examId }}]</td>
 
                         <!-- Exam Details -->
                         <td rowspan="{{ rowspan }}">
-                            Exam Date : {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} - {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>      
-                            Exam Day  : [{{ att.report.exam.examStartTime.strftime("%A") }}] - [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
-                            Exam Time : {{ att.report.exam.examStartTime.strftime("%H:%M") }} - {{ att.report.exam.examEndTime.strftime("%H:%M") }} <br>
-                            Exam Venue: [{{ att.report.exam.examVenue }}]
+                            Exam Date : {{ row.examStartTime.strftime("%Y-%m-%d") }} - {{ row.examEndTime.strftime("%Y-%m-%d") }} <br>      
+                            Exam Day  : [{{ row.examStartTime.strftime("%A") }}] - [{{ row.examEndTime.strftime("%A") }}] <br>
+                            Exam Time : {{ row.examStartTime.strftime("%H:%M") }} - {{ row.examEndTime.strftime("%H:%M") }} <br>
+                            Exam Venue: [{{ row.examVenue }}]
                         </td>
                         
                         <td>[{{ row.examNoInvigilator }}]</td>
@@ -234,3 +234,7 @@
     </div>
 </div>
 {% endblock %}
+
+
+
+
