--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -208,12 +208,12 @@
 
                         <!-- Course Details -->
                         <td rowspan="{{ rowspan }}">
-                            Course Name: {{ row.course.courseName }} <br>
+                            Course Name        : {{ row.course.courseName }} <br>
                             Course Code/Section: {{ row.course.courseCodeSection }}<br>
-                            Program Code: {{ row.course.courseDepartment }} <br>
-                            Number of Students: [{{ row.course.courseStudent }}] <br>
-                            Practical Lecturer: [{{ row.course.practicalLecturer.userName }}] <br>
-                            Tutorial Lecturer: [{{ row.course.tutorialLecturer.userName }}]
+                            Program Code       : {{ row.course.courseDepartment }} <br>
+                            Number of Students : {{ row.course.courseStudent }} <br>
+                            Practical Lecturer : {{ row.course.practicalLecturer.userName }} <br>
+                            Tutorial Lecturer  : {{ row.course.tutorialLecturer.userName }}
                         </td>
 
                         <td>[{{ row.examId }}]</td>
@@ -221,9 +221,9 @@
                         <!-- Exam Details -->
                         <td rowspan="{{ rowspan }}">
                             Exam Date : {{ row.examStartTime.strftime("%Y-%m-%d") }} - {{ row.examEndTime.strftime("%Y-%m-%d") }} <br>      
-                            Exam Day  : [{{ row.examStartTime.strftime("%A") }}] - [{{ row.examEndTime.strftime("%A") }}] <br>
+                            Exam Day   : {{ row.examStartTime.strftime("%A") }} - {{ row.examEndTime.strftime("%A") }} <br>
                             Exam Time : {{ row.examStartTime.strftime("%H:%M") }} - {{ row.examEndTime.strftime("%H:%M") }} <br>
-                            Exam Venue: [{{ row.examVenue }}]
+                            Exam Venue: {{ row.examVenue }}
                         </td>
                         
                         <td>[{{ row.examNoInvigilator }}]</td>
