--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -35,20 +35,20 @@
 
                                 <!-- Course Details -->
                                 <td rowspan="{{ rowspan }}">
-                                    Course Name: {{ att.report.exam.course.courseName }} <br>
+                                    Course Name        : {{ att.report.exam.course.courseName }} <br>
                                     Course Code/Section: {{ att.report.exam.course.courseCodeSection }}<br>
-                                    Program Code: {{ att.report.exam.course.courseDepartment }} <br>
-                                    Number of Students: [{{ att.report.exam.course.courseStudent }}] <br>
-                                    Practical Lecturer: [{{ att.report.exam.course.practicalLecturer.userName }}] <br>
-                                    Tutorial Lecturer: [{{ att.report.exam.course.tutorialLecturer.userName }}]
+                                    Program Code       : {{ att.report.exam.course.courseDepartment }} <br>
+                                    Number of Students : {{ att.report.exam.course.courseStudent }} <br>
+                                    Practical Lecturer : {{ att.report.exam.course.practicalLecturer.userName }} <br>
+                                    Tutorial Lecturer  : {{ att.report.exam.course.tutorialLecturer.userName }}
                                 </td>
 
                                 <!-- Exam Details -->
                                 <td rowspan="{{ rowspan }}">
                                     Exam Date : {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} - {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>      
-                                    Exam Day  : [{{ att.report.exam.examStartTime.strftime("%A") }}] - [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
+                                    Exam Day   : {{ att.report.exam.examStartTime.strftime("%A") }} - {{ att.report.exam.examEndTime.strftime("%A") }} <br>
                                     Exam Time : {{ att.report.exam.examStartTime.strftime("%H:%M") }} - {{ att.report.exam.examEndTime.strftime("%H:%M") }} <br>
-                                    Exam Venue: [{{ att.report.exam.examVenue }}]
+                                    Exam Venue: {{ att.report.exam.examVenue }}
                                 </td>
 
                                 <td rowspan="{{ rowspan }}">[{{ att.report.exam.examNoInvigilator }}]</td>
@@ -56,8 +56,8 @@
 
                             <!-- Invigilator Details (one per row) -->
                             <td>
-                                ID: [{{ att.invigilator.userId }}] <br>
-                                Name: {{ att.invigilator.userName }} <br>
+                                ID     : {{ att.invigilator.userId }} <br>
+                                Name   : {{ att.invigilator.userName }} <br>
                                 Contact: {{ att.invigilator.userContact }}
                             </td>
 
