--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -34,14 +34,14 @@
                             <td rowspan="{{ rowspan }}">[{{ att.report.exam.examId }}]</td>
                         
                             <!-- Course Details -->
-                            <td rowspan="{{ rowspan }}">
+                            <td rowspan="{{ rowspan }}" style="white-space: pre;">
                                 Course Name        : {{ att.report.exam.course.courseName }} <br>
                                 Course Code/Section: {{ att.report.exam.course.courseCodeSection }}<br>
                                 Number of Students : {{ att.report.exam.course.courseStudent }}
                             </td>
 
                             <!-- Exam Details -->
-                            <td rowspan="{{ rowspan }}">
+                            <td rowspan="{{ rowspan }}" style="white-space: pre;">
                                 Exam Date : {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} - {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>      
                                 Exam Day   : {{ att.report.exam.examStartTime.strftime("%A") }} - {{ att.report.exam.examEndTime.strftime("%A") }} <br>
                                 Exam Time : {{ att.report.exam.examStartTime.strftime("%H:%M") }} - {{ att.report.exam.examEndTime.strftime("%H:%M") }} <br>
@@ -53,7 +53,7 @@
                         {% endif %}
 
                         <!-- Invigilator Details -->
-                        <td>
+                        <td style="white-space: pre;">
                             ID     : {{ att.invigilator.userId }} <br>
                             Name   : {{ att.invigilator.userName }} <br>
                             Contact: {{ att.invigilator.userContact }}
