--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -208,11 +208,11 @@
 
                         <!-- Course Details -->
                         <td rowspan="{{ rowspan }}" style="white-space: pre;">
-                            Course Name        : {{ row.course.courseName }} <br>
-                            Course Code/Section: {{ row.course.courseCodeSection }}<br>
-                            Program Code       : {{ row.course.courseDepartment }} <br>
-                            Number of Students : {{ row.course.courseStudent }} <br>
-                            Practical Lecturer : {{ row.course.practicalLecturer.userName }} <br>
+                            Course Name        : {{ row.course.courseName }} 
+                            Course Code/Section: {{ row.course.courseCodeSection }}
+                            Program Code       : {{ row.course.courseDepartment }} 
+                            Number of Students : {{ row.course.courseStudent }} 
+                            Practical Lecturer : {{ row.course.practicalLecturer.userName }} 
                             Tutorial Lecturer  : {{ row.course.tutorialLecturer.userName }}
                         </td>
 
