--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -197,7 +197,7 @@
                     <td>[{{ row.courseHour }}]</td>
                     <td>{{ row.courseDepartment }}</td>
                     <td>[{{ row.courseExamId }}]</td>
-                    <td rowspan="{{ rowspan }}" style="white-space: pre;">
+                    <td rowspan="{{ rowspan }}">
                         Practical Lecturer: {{ row.practicalLecturer.userName }} <br>
                         Tutorial Lecturer : {{ row.tutorialLecturer.userName }}
                     </td>
