--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -34,7 +34,7 @@
                                 <td rowspan="{{ rowspan }}" style="text-align:center;">[{{ att.report.exam.examId }}]</td>
 
                                 <!-- Course Details -->
-                                <td rowspan="{{ rowspan }}" style="white-space: pre;">
+                                <td rowspan="{{ rowspan }}">
                                     Course Name        : {{ att.report.exam.course.courseName }} <br>
                                     Course Code/Section: {{ att.report.exam.course.courseCodeSection }}<br>
                                     Program Code       : {{ att.report.exam.course.courseDepartment }} <br>
@@ -44,7 +44,7 @@
                                 </td>
 
                                 <!-- Exam Details -->
-                                <td rowspan="{{ rowspan }}" style="white-space: pre;">
+                                <td rowspan="{{ rowspan }}">
                                     Exam Date : {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} - {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>      
                                     Exam Day   : {{ att.report.exam.examStartTime.strftime("%A") }} - {{ att.report.exam.examEndTime.strftime("%A") }} <br>
                                     Exam Time : {{ att.report.exam.examStartTime.strftime("%H:%M") }} - {{ att.report.exam.examEndTime.strftime("%H:%M") }} <br>
@@ -55,7 +55,7 @@
                             {% endif %}
 
                             <!-- Invigilator Details (one per row) -->
-                            <td style="white-space: pre;">
+                            <td>
                                 ID     : {{ att.invigilator.userId }} <br>
                                 Name   : {{ att.invigilator.userName }} <br>
                                 Contact: {{ att.invigilator.userContact }}
