--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -42,10 +42,12 @@
 
                             <!-- Exam Details -->
                             <td rowspan="{{ rowspan }}">
-                                Exam Date : {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} - {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>      
-                                Exam Day   : {{ att.report.exam.examStartTime.strftime("%A") }} - {{ att.report.exam.examEndTime.strftime("%A") }} <br>
-                                Exam Time : {{ att.report.exam.examStartTime.strftime("%H:%M") }} - {{ att.report.exam.examEndTime.strftime("%H:%M") }} <br>
-                                Exam Venue: {{ att.report.exam.examVenue }}
+                                Exam Date   : {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} - {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>      
+                                Exam Day    : {{ att.report.exam.examStartTime.strftime("%A") }} - {{ att.report.exam.examEndTime.strftime("%A") }} <br>
+                                Exam Time   : {{ att.report.exam.examStartTime.strftime("%H:%M") }} - {{ att.report.exam.examEndTime.strftime("%H:%M") }} <br>
+                                Exam Period : {{ (att.report.exam.examStartTime).seconds- (att.report.exam.examEndTime).seconds // 3600 }}h - 
+                                              {{ ((att.report.exam.examStartTime).seconds- (att.report.exam.examEndTime).seconds % 60) // 3600 }}m<br>
+                                Exam Venue  : {{ att.report.exam.examVenue }}
                             </td>
 
                             <!-- Number of Invigilators -->
