--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -220,9 +220,9 @@
 
                         <!-- Exam Details -->
                         <td rowspan="{{ rowspan }}">
-                            Exam Date  : {{ row.examStartTime.strftime("%Y-%m-%d") }} - {{ row.examEndTime.strftime("%Y-%m-%d") }} <br>      
-                            Exam Day   : {{ row.examStartTime.strftime("%A") }} - {{ row.examEndTime.strftime("%A") }} <br>
-                            Exam Time  : {{ row.examStartTime.strftime("%H:%M") }} - {{ row.examEndTime.strftime("%H:%M") }} <br>
+                            Exam Date  : {{ row.examStartTime.strftime("%Y-%m-%d") }} to {{ row.examEndTime.strftime("%Y-%m-%d") }} <br>      
+                            Exam Day   : {{ row.examStartTime.strftime("%A") }} to {{ row.examEndTime.strftime("%A") }} <br>
+                            Exam Time  : {{ row.examStartTime.strftime("%H:%M") }} to {{ row.examEndTime.strftime("%H:%M") }} <br>
                             Exam Period: {{ (row.examEndTime - row.examStartTime).seconds // 3600 }}h {{ ((row.examEndTime - row.examStartTime).seconds % 3600) // 60 }}m <br>
                             Exam Venue : {{ row.examVenue }}
                         </td>
