--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -40,16 +40,16 @@
                                     Program Code       : {{ att.report.exam.course.courseDepartment }} <br>
                                     Number of Students : {{ att.report.exam.course.courseStudent }} <br>
                                     Practical Lecturer : {{ att.report.exam.course.practicalLecturer.userName }} <br>
-                                    Tutorial Lecturer  : {{ att.report.exam.course.tutorialLecturer.userName }}
+                                    Tutorial Lecturer  : {{ att.report.exam.course.tutorialLecturer.userName }} 
                                 </td>
 
                                 <!-- Exam Details -->
                                 <td rowspan="{{ rowspan }}">
-                                    Exam Date   : {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} - {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>      
-                                    Exam Day    : {{ att.report.exam.examStartTime.strftime("%A") }} - {{ att.report.exam.examEndTime.strftime("%A") }} <br>
-                                    Exam Time   : {{ att.report.exam.examStartTime.strftime("%H:%M") }} - {{ att.report.exam.examEndTime.strftime("%H:%M") }} <br>
-                                    Exam Period : {{ (att.report.exam.examStartTime - att.report.exam.examEndTime).seconds // 3600 }}h - 
-                                              {{ ((att.report.exam.examStartTime - att.report.exam.examEndTime).seconds % 60) // 3600 }}m<br>
+                                    Exam Date   : {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} to {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>      
+                                    Exam Day    : {{ att.report.exam.examStartTime.strftime("%A") }} to {{ att.report.exam.examEndTime.strftime("%A") }} <br>
+                                    Exam Time   : {{ att.report.exam.examStartTime.strftime("%H:%M") }} to {{ att.report.exam.examEndTime.strftime("%H:%M") }} <br>
+                                    Exam Period : {{ (att.report.exam.examEndTime - att.report.exam.examStartTime).seconds // 3600 }}h - 
+                                              {{ ((att.report.exam.examEndTime - att.report.exam.examStartTime).seconds % 60) // 3600 }}m<br>
                                     Exam Venue  : {{ att.report.exam.examVenue }}
                                 </td>
 
