--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -45,12 +45,12 @@
 
                                 <!-- Exam Details -->
                                 <td rowspan="{{ rowspan }}">
-                                    Exam Date   : {{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }} to {{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }} <br>      
-                                    Exam Day    : {{ att.report.exam.examStartTime.strftime("%A") }} to {{ att.report.exam.examEndTime.strftime("%A") }} <br>
-                                    Exam Time   : {{ att.report.exam.examStartTime.strftime("%H:%M") }} to {{ att.report.exam.examEndTime.strftime("%H:%M") }} <br>
-                                    Exam Period : {{ (att.report.exam.examEndTime - att.report.exam.examStartTime).seconds // 3600 }}h - 
-                                              {{ ((att.report.exam.examEndTime - att.report.exam.examStartTime).seconds % 60) // 3600 }}m<br>
-                                    Exam Venue  : {{ att.report.exam.examVenue }}
+                                    Exam Date   : [{{ att.report.exam.examStartTime.strftime("%Y-%m-%d") }}] - [{{ att.report.exam.examEndTime.strftime("%Y-%m-%d") }}] <br>      
+                                    Exam Day    : [{{ att.report.exam.examStartTime.strftime("%A") }}] - [{{ att.report.exam.examEndTime.strftime("%A") }}] <br>
+                                    Exam Time   : [{{ att.report.exam.examStartTime.strftime("%H:%M") }}] - [{{ att.report.exam.examEndTime.strftime("%H:%M") }}] <br>
+                                    Exam Period : [{{ (att.report.exam.examEndTime - att.report.exam.examStartTime).seconds // 3600 }}h - 
+                                                {{ ((att.report.exam.examEndTime - att.report.exam.examStartTime).seconds % 60) // 3600 }}m]<br>
+                                    Exam Venue  : [{{ att.report.exam.examVenue }}]
                                 </td>
 
                                 <td rowspan="{{ rowspan }}">[{{ att.report.exam.examNoInvigilator }}]</td>
