--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -197,9 +197,17 @@
                     <td>[{{ row.courseHour }}]</td>
                     <td>{{ row.courseDepartment }}</td>
                     <td>[{{ row.courseExamId }}]</td>
-                    <td rowspan="{{ rowspan }}">
-                        Practical Lecturer: {{ row.practicalLecturer.userName }} <br>
-                        Tutorial Lecturer : {{ row.tutorialLecturer.userName }}
+                    <td>
+                        <table style="border-collapse: collapse;">
+                            <tr>
+                                <td style="font-weight:bold;">Practical Lecturer</td>
+                                <td>: {{ row.practicalLecturer.userName }}</td>
+                            </tr>
+                            <tr>
+                                <td style="font-weight:bold;">Tutorial Lecturer</td>
+                                <td>: {{ row.tutorialLecturer.userName }}</td>
+                            </tr>
+                        </table>
                     </td>
                     <td>[{{ row.courseStudent }}]</td>
                 </tr>
@@ -209,3 +217,4 @@
     </div>
 </div>
 {% endblock %}
+
