--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -197,7 +197,7 @@
                     <td>[{{ row.courseHour }}]</td>
                     <td>{{ row.courseDepartment }}</td>
                     <td>[{{ row.courseExamId }}]</td>
-                    <td>
+                    <td style="border-bottom:none;">
                         <table style="border-collapse: collapse;">
                             <tr>
                                 <td style="font-weight:bold;">Practical Lecturer</td>
